Removed overflow: hidden and fixed links

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
   color: #222;
   background: url('images/sea.jpg') ;
   background-size: cover;
-  overflow: hidden;
 }
 /* Link Styles */
 
